<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="server"
        android:title="@string/settings_server" >
        <EditTextPreference
            android:defaultValue="isajia.com"
            android:key="serverHost"
            android:persistent="true"
            android:summary="@string/server_host_summary"
            android:title="@string/server_host" />
        <EditTextPreference
            android:defaultValue="1234"
            android:key="serverPort"
            android:persistent="true"
            android:summary="@string/server_port_summary"
            android:title="@string/server_port" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="client"
        android:title="@string/settings_client" >
        <EditTextPreference
            android:defaultValue=""
            android:digits="+0123456789"
            android:key="clientId"
            android:persistent="true"
            android:summary="@string/client_id_summary"
            android:title="@string/client_id" />
        <EditTextPreference
            android:defaultValue=""
            android:key="clientPassword"
            android:persistent="true"
            android:summary="@string/client_password_summary"
            android:title="@string/client_password" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="playSound"
            android:persistent="true"
            android:summary="@string/play_sound_summary"
            android:title="@string/play_sound" />
    </PreferenceCategory>

</PreferenceScreen>