<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_start_transceiver"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_start_transceiver"/>
    
    <item
        android:id="@+id/menu_stop_transceiver"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_stop_transceiver"/>

    <item
        android:id="@+id/menu_public_accounts_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_public_accounts_settings"/>
    
    <item
        android:id="@+id/menu_system_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_system_settings"/>
</menu>