<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_list_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/message_list_item_unselected"
    android:orientation="horizontal"
    android:padding="4dp"
    tools:ignore="ContentDescription" >

    <ImageView
        android:id="@+id/msgSender"
        android:layout_width="36dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dip"
        android:layout_marginTop="4dip"
        android:adjustViewBounds="true"
        android:contentDescription="@string/msg_sender"
        android:cropToPadding="true"
        android:scaleType="fitStart" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dip" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="56dip"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/msgStatus"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginTop="4dip"
                    android:layout_marginRight="4dip"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/message_send"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/msgTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="黑体"
                    android:text="@string/msg_title"
                    android:textColor="#382d24"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="64dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/msgTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="宋体"
                    android:maxLines="1"
                    android:text="@string/msg_time"
                    android:textColor="@color/msg_time"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/msgActions"
                    android:layout_width="wrap_content"
                    android:layout_height="36dip"
                    android:layout_gravity="center"
                     android:layout_marginTop="-12dip"
                    android:layout_marginBottom="-14dip"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/msg_actions"
                    android:cropToPadding="true"
                    android:gravity="right"
                    android:scaleType="fitCenter"
                    android:src="@drawable/message_link" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/msgBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="黑体"
            android:text="@string/msg_body"
            android:textColor="#382d24"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <WebView
            android:id="@+id/msgBodyHtml"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/msgAttachment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/msg_attachment"
            android:cropToPadding="true"
            android:scaleType="fitStart" />
    </LinearLayout>

</LinearLayout>