<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/message_popup_bg"
    android:contentDescription="240sp"
    android:minWidth="240sp"
    android:orientation="horizontal"
    android:padding="6dp"
    tools:ignore="HardcodedText,ContentDescription" >

    <LinearLayout
        android:id="@+id/msgContainer"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/msgTitleBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/msgIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/msg_index"
                android:textColor="@color/message_index_color"
                android:textIsSelectable="false"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/msgSenderIcon"
                android:layout_width="36dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dip"
                android:layout_toRightOf="@id/msgIndex"
                android:adjustViewBounds="true"
                android:contentDescription="@string/msg_sender"
                android:cropToPadding="true"
                android:scaleType="fitStart"
                android:src="@drawable/sender_avatar" />

            <TextView
                android:id="@+id/msgSenderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="36dp"
                android:layout_toRightOf="@id/msgSenderIcon"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/msg_sender"
                android:textColor="@color/message_sender_color"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:src="@drawable/close_dialog" />
        </RelativeLayout>

        <TextView
            android:id="@+id/msgTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/msg_title"
            android:textColor="@color/message_title_color"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msgBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="10"
            android:text="@string/msg_body"
            android:textColor="@color/message_body_color"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <WebView
            android:id="@+id/msgBodyHtml"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/msgAttachment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/msg_attachment"
            android:cropToPadding="true"
            android:scaleType="fitStart" />
    </LinearLayout>

</LinearLayout>